src/include/lem/solarix/solarix_grammar_engine.h



typedef void* HLINKSINFO;


// http://www.solarix.ru/api/en/sol_ListLinksTxt.shtml
FAIND_API(HLINKSINFO) sol_ListLinksTxt( HGREN hEngine, int EntryID1, int LinkType, int Flags );


// http://www.solarix.ru/api/en/sol_DeleteLinksInfo.shtml
FAIND_API(int) sol_DeleteLinksInfo( HGREN hEng, HLINKSINFO hList );


// http://www.solarix.ru/api/en/sol_LinksInfoCount.shtml
FAIND_API(int) sol_LinksInfoCount( HGREN hEng, HLINKSINFO hList );


// http://www.solarix.ru/api/en/sol_LinksInfoType.shtml
FAIND_API(int) sol_LinksInfoType( HGREN hEng, HLINKSINFO hList, int Index );


// http://www.solarix.ru/api/en/sol_LinksInfoID.shtml
FAIND_API(int) sol_LinksInfoID( HGREN hEng, HLINKSINFO hList, int Index );


// http://www.solarix.ru/api/ru/sol_LinksInfoCode.shtml
FAIND_API(int) sol_LinksInfoCode( HGREN hEngine, HLINKSINFO hList, int Index );


// http://www.solarix.ru/api/en/sol_LinksInfoEKey1.shtml
FAIND_API(int) sol_LinksInfoEKey1( HGREN hEng, HLINKSINFO hList, int Index );


// http://www.solarix.ru/api/en/sol_LinksInfoEKey2.shtml
FAIND_API(int) sol_LinksInfoEKey2( HGREN hEng, HLINKSINFO hList, int Index );

FAIND_API(int) sol_CountNGrams( HGREN hEngine, int type, int Order, unsigned int *Hi, unsigned int *Lo );


FAIND_API(int) sol_Free( HGREN hEngine, void *Ptr );


FAIND_API(wchar_t*) sol_GetPhraseText( HGREN hEngine, int PhraseID );


FAIND_API(int) sol_GetPhraseLanguage( HGREN hEngine, int PhraseID );

FAIND_API(int) sol_GetPhraseClass( HGREN hEngine, int PhraseID );

FAIND_API(int) sol_DeletePhrase( HGREN hEngine, int te_id );


// Error reporting functions.
FAIND_API(int) sol_GetErrorLen( HGREN hEngine );


FAIND_API(int) sol_GetError( HGREN hEngine, wchar_t *Buffer, int buffer_len );


FAIND_API(void) sol_ClearError( HGREN hEngine );