src/include/lem/solarix/GrammarEngineApi.pas


// http://www.solarix.ru/api/ru/sol_DeletePhrase.shtml
function sol_DeletePhrase( hEngine: PInteger; PhraseID: integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_DeletePhrase';

// http://www.solarix.ru/api/ru/sol_GetPhraseLanguage.shtml
function sol_GetPhraseLanguage( hEngine: PInteger; PhraseID: integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetPhraseLanguage';

// http://www.solarix.ru/api/ru/sol_GetPhraseClass.shtml
function sol_GetPhraseClass( hEngine: PInteger; PhraseID: integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetPhraseClass';

// http://www.solarix.ru/api/ru/sol_GetPhraseText.shtml
function sol_GetPhraseText( hEngine: PInteger; PhraseID: integer ): PWideChar; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetPhraseText';
function sol_GetPhraseTextPAS( hEngine: PInteger; PhraseID: integer ): WideString;

// http://www.solarix.ru/api/en/sol_Free.shtml
function sol_Free( hEngine: PInteger; Ptr: Pointer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_Free';

// http://www.solarix.ru/api/ru/sol_GetErrorLen.shtml
function sol_GetErrorLen( hEngine: PInteger ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetErrorLen';

// http://www.solarix.ru/api/ru/sol_GetError.shtml
function sol_GetError( hEngine: PInteger; TextBuffer: PWideChar; TextBufferLen: integer ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_GetError';
function sol_GetErrorPAS( hEngine: PInteger ): WideString;

// http://www.solarix.ru/api/ru/sol_ClearError.shtml
function sol_ClearError( hEngine: PInteger ): integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_ClearError';


// http://www.solarix.ru/api/en/sol_ListLinksTxt.shtml
function sol_ListLinksTxt( hEngine: PInteger; EntryID1: integer; LinkType: integer; Flags: integer ): PInteger; stdcall; external 'solarix_grammar_engine.dll' name 'sol_ListLinksTxt';

// http://www.solarix.ru/api/en/sol_DeleteLinksInfo.shtml
function sol_DeleteLinksInfo( hEngine: PInteger; hList: PInteger {HLINKSINFO} ) : integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_DeleteLinksInfo';

// http://www.solarix.ru/api/en/sol_LinksInfoCount.shtml
function sol_LinksInfoCount( hEngine: PInteger; hList: PInteger {HLINKSINFO} ) : integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_LinksInfoCount';

// http://www.solarix.ru/api/en/sol_LinksInfoType.shtml
function sol_LinksInfoType( hEngine: PInteger; hList: PInteger {HLINKSINFO}; Index: integer ) : integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_LinksInfoType';

// http://www.solarix.ru/api/en/sol_LinksInfoID.shtml
function sol_LinksInfoID( hEngine: PInteger; hListhList: PInteger {HLINKSINFO}; Index: integer ) : integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_LinksInfoID';

// http://www.solarix.ru/api/ru/sol_LinksInfoCode.shtml
function sol_LinksInfoCode( hEngine: PInteger; hListhList: PInteger {HLINKSINFO}; Index: integer ) : integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_LinksInfoCode';

// http://www.solarix.ru/api/en/sol_LinksInfoEKey1.shtml
function sol_LinksInfoEKey1( hEngine: PInteger; hListhList: PInteger {HLINKSINFO}; Index: integer ) : integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_LinksInfoEKey1';

// http://www.solarix.ru/api/en/sol_LinksInfoEKey2.shtml
function sol_LinksInfoEKey2( hEngine: PInteger; hListhList: PInteger {HLINKSINFO}; Index: integer ) : integer; stdcall; external 'solarix_grammar_engine.dll' name 'sol_LinksInfoEKey2';



implementation

function sol_GetErrorPAS( hEngine: PInteger ): WideString;
var len: integer;
var ptr_str: PWideChar;
begin

 sol_GetErrorPAS := '';
 len := sol_GetErrorLen( hEngine );

 if( len<>0 )
  then begin
   ptr_str := PWideChar(StrAlloc( (len+1)*2 ));
   if( ptr_str<>nil )
    then begin
     sol_GetError( hEngine, ptr_str, len );
     sol_ClearError(hEngine);
     sol_GetErrorPAS := WideString( PWideChar(ptr_str) );
    end
  end

end;


function sol_CountNGrams64( hEngine: PInteger; Flags: Integer; Order: Integer ): Int64;
var Hi, Lo: integer;
var Res: Int64;
var rc: integer;
begin

 rc := sol_CountNGrams( hEngine, Flags, Order, @Hi, @Lo );
 
 Res := (Int64(Hi) Shl 32) OR Int64(Lo);
 
 sol_CountNGrams64 := Res; 

end;


function sol_GetPhraseTextPAS( hEngine: PInteger; PhraseID: integer ): WideString;
var str_ptr: PWideChar;
var res: WideString;
begin
 str_ptr := sol_GetPhraseText( hEngine, PhraseID );
 if( str_ptr<>nil )
  then begin
   res := str_ptr;
   sol_Free( hEngine, str_ptr );
   sol_GetPhraseTextPAS := res;
  end else
  begin
   sol_GetPhraseTextPAS := '';
  end;
end;

end.
